[tool.poetry]
name = "oc_ocdm"
version = "8.1.0"
description = "Object mapping library for manipulating RDF graphs that are compliant with the OpenCitations datamodel."
authors = [
    "Silvio Peroni <essepuntato@gmail.com>",
    "Marilena Daquino <marilena.daquino2@unibo.it>",
    "Fabio Mariani <fabio.mariani6@studio.unibo.it>",
    "Simone Persiani <iosonopersia@gmail.com>",
    "Arcangelo Massari <arcangelo.massari@unibo.it>"
]
readme = "README.md"
license = "ISC"
homepage = "https://opencitations.net"
repository = "https://github.com/opencitations/oc_ocdm"
documentation = "https://oc-ocdm.readthedocs.io"
keywords = ["opencitations", "openscience", "datamodel", "mapping"]

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "^6.0.0"
SPARQLWrapper = "2.0.0"
filelock = "^3.6.0"
pyshacl = "0.23.0"
setuptools = "^68.2.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinx_rtd_theme = "^1.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
coverage-badge = "^1.1.0"
wget = "^3.2"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
test = 'scripts:main'