[project]
name = "oc-ocdm"
version = "10.0.1"
description = "Object mapping library for manipulating RDF graphs that are compliant with the OpenCitations datamodel."
readme = "README.md"
license = "ISC"
keywords = ["opencitations", "openscience", "datamodel", "mapping"]
authors = [
    { name = "Silvio Peroni", email = "essepuntato@gmail.com" },
    { name = "Marilena Daquino", email = "marilena.daquino2@unibo.it" },
    { name = "Fabio Mariani", email = "fabio.mariani6@studio.unibo.it" },
    { name = "Simone Persiani", email = "iosonopersia@gmail.com" },
    { name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Typing :: Typed",
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "filelock>=3.6.0",
    "pyshacl>=0.30.1",
    "rdflib>=7.4.0",
    "redis>=4.5.5,<8.0.0",
    "sparqlite>=1.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "coverage>=6.5.0",
    "genbadge[coverage]>=1.1.3",
    "matplotlib>=3.10.7",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "sphinx>=4.4.0",
    "sphinx-rtd-theme>=1.0.0",
    "wget>=3.2",
]

[project.urls]
Homepage = "https://opencitations.net"
Repository = "https://github.com/opencitations/oc_ocdm"
Documentation = "https://oc-ocdm.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
